--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "npm-pack": "COPY \/Y \"README.md\" \"projects\/controls-library\/README.md\" && COPY \/Y \"LICENSE\" \"projects\/controls-library\/LICENSE\" && ng build --project=controls-library && cd dist/controls-library && npm pack"
+    "npm-pack": "COPY /Y \"README.md\" \"projects/controls-library/README.md\" && COPY /Y \"LICENSE\" \"projects/controls-library/LICENSE\" && ng build --project=controls-library && cd dist/controls-library && npm pack"
   },
   "private": true,
   "dependencies": {
