--- a/projects/controls-library/package.json
+++ b/projects/controls-library/package.json
@@ -1,6 +1,25 @@
 {
   "name": "controls-library",
-  "version": "0.0.8",
+  "version": "1.0.1",
+  "description": "For angular 6+ versions apps. Custom controls for input currency, input with range numbers, percents, positive numbers etc.",
+  "keywords": [
+    "angular",
+    "ngx",
+    "input",
+    "formControl",
+    "form control",
+    "range",
+    "percent",
+    "currency",
+    "form group",
+    "formGroup"
+  ],
+  "homepage": "https://github.com/vysheradugi4/controls-library#readme",
+  "license": "The MIT License (MIT)",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/vysheradugi4/controls-library"
+  },
   "peerDependencies": {
     "@angular/common": "^7.0.0",
     "@angular/core": "^7.0.0"
