--- a/projects/controls-library/package.json
+++ b/projects/controls-library/package.json
@@ -1,6 +1,6 @@
 {
   "name": "controls-library",
-  "version": "2.2.0",
+  "version": "2.3.0",
   "description": "For angular 6+ versions apps. Custom controls for input currency, input with range numbers, percents, positive numbers etc.",
   "keywords": [
     "angular",
@@ -8,11 +8,13 @@
     "input",
     "formControl",
     "form control",
+    "custom form control",
     "range",
     "percent",
     "currency",
     "form group",
-    "formGroup"
+    "formGroup",
+    "positive numbers input"
   ],
   "homepage": "https://github.com/vysheradugi4/controls-library#readme",
   "license": "The MIT License (MIT)",
